--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,6 +33,7 @@
     "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@eslint/js": "^9.10.0",
     "@feature-sliced/eslint-config": "^0.1.1",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
